--- a/Readme
+++ b/Readme
@@ -1,1 +1,6 @@
-Test
+Unfortunately, I didn't get to work for CCS very long. 
+But, I was working with one of the US Team members to develop a tool to quickly allow us to fill templates out that were previously far too long and technical.
+We made a consolidated version for clients to fill out.
+This program would target the consolidated, and the original template used by our technical team in India.
+Then, it would just fill out the template based on how it was mapped out.
+Basic utility program to be honest.
